Containers/helloworld-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-svc
spec:
  selector:
    app: helloworld
  ports:
  - port: 80
    targetPort: 80
  type: LoadBalancer
