Containers/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - host: nginx.52.230.6.127.nip.io
    http:
      paths:
      - backend:
          serviceName: nginx-svc
          servicePort: 80
        path: /
